Add a little HTML and todo list in JS file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Library Project</title>
 </head>
 <body>
-    
+    <header>Library</header>
+    <div class="Info">This is a library project for The Odin Project, where you can keep track of the books you have read. View the code on github here: (placeholder link)</div>
+    <main>
+        
+    </main>
+    <footer></footer>
 </body>
 </html>
